Changelog
=========

2019.4.0 (unreleased)
---------------------

- Add teamraum todo content-type. [elioschmutz]
- Fix upgrade step that adds linguistic index for task principal. [lgraf]
- Add ftw.catalogdoctor to dependencies. [deiferni]
- Fix exception formatter patch when there is no plone site. [deiferni]
- @listing endpoint: Exclude searchroot from Solr results. [lgraf]
- Avoid reindexing 'created' during IObjectCopiedEvent to fix copy & pasting with Solr. [lgraf]
- Allow Readers, Member and Managers to access users information for all users. [phgross]
- @listing endpoint: Add support for filtering by relative path depth. [lgraf]
- Update plone.restapi to latest release. [phgross]
- Add optional facet values and counts search to listing endpoint. [njohner]
- Add POST restapi endpint @mworkspace-invitations/{id}/{action}. [elioschmutz]
- Add GET restapi endpint @my-workspace-invitations. [elioschmutz]
- Allow range queries on deadline in listing endpoint. [njohner]
- Update and improve documentation for checked-out documents. [phgross, njohner]
- Add fields available in listing endpoint for each type to documentation. [njohner]
- Bump sablon to 0.3.1 and nokogiri to 1.9.1. [deiferni]
- Add restapi @participations endpoint to handle participations. [elioschmutz]
- Add per user configuration to deactivate inbox notifications. [njohner]
- Add linguistic index on task principal column for oracle backends. [phgross]
- Register ChoiceFieldDeserializer using overrides instead of configure ZCML. [lgraf]
- Update Creator, created and Date when copy/pasting an object. [njohner]
- Docs: Add tasks to documented content types. [lgraf]
- Add per user configuration to activate notifications for own actions. [njohner]
- Update ftw.solr to version 2.5.0 which allows near realtime searching. [buchi]
- Update Solr to version 8.1.1. [buchi]


2019.3.0 (2019-06-17)
---------------------
