@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Add teamraum todo content-type. [elioschmutz]
+- Fix creation and handling for subtasks of sequential tasks. [phgross]
 - Fix upgrade step that adds linguistic index for task principal. [lgraf]
 - Add ftw.catalogdoctor to dependencies. [deiferni]
 - Fix exception formatter patch when there is no plone site. [deiferni]
